# comfyui-2dpose-editor

./: .gitignore  DEVLOG.md  LICENSE  README.md  __init__.py  generate_atlas_template.html  generate_sample_atlas.html  index_v.html  index_v2.html  pose_editor_node.py  pyproject.toml
.github/workflows/: publish.yml
js/: pose_editor.js
